--- a/Frank.html
+++ b/Frank.html
@@ -7,7 +7,7 @@
  <tr valign=top>
    <td>
     <IMG height=300 SRC="images/frank/frank_KB_25.jpg" ALT="Mit Klein Flasche"><br>
-     Mit Klein Flasche<br>March 2025
+     mit Kleinsche Fl&auml;che<br>March 2025
   </td>
    <td>
     <IMG height=300 SRC="images/frank/frank_23.jpg" ALT="Grand Canyon on 60th Birthday"><br>
