--- a/research/stories/LGalois/LG4_raw.html
+++ b/research/stories/LGalois/LG4_raw.html
@@ -1,70 +1,30 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Enriched Schubert Problems in LG(4)</title>
+  <title>Enriched Problems in LG(4)</title>
 </head>
 <body bgcolor="#ffffff">
 <!---------------------------------------------------------------------------------------------------->
-<table border=0>
+<table>
   <tr valign=top>
-    <td rowspan=2><img src="images/TIe2ThI.4.png"> </td>
     <td width=15> </td>
     <td>
-      <h1>Enriched Schubert Problems in LG(4)</h1>
+      <h1>Enriched Problems in LG(4)</h1>
       <font size=+2>
-      <a href="https://franksottile.github.io">Frank Sottile</a><br>
-      <a href="https://franksottile.github.io"></a>C.J. Bott</font>
+      <a href="https://franksottile.github.io">Frank Sottile</a>
+      </font>
     </td>
-  </tr>
-  <tr><td></td>
-    <td><font size=+1> &nbsp;  &nbsp; 
-      There are 44 essential Schubert problems on the Lagrangian Grassmannian of isotropic 4-planes in 8-space, LG(4).
-      (By essential, we mean that they do not reduce to a smaller Lagrangian Grassmannian, and have more than two solutions.)
-      Of these three have been determined to be enriched in that they do not have full symmetric Galois groups.
-      The method used is to compute Frobenius elements in the Galois groups over <b>Q</b>, giving a type of a lower bound the Galois group.
-      When the Galois group is the full symmetric group, this often quickly determines that, and  it can be used to infer that the problem is
-      enriched.
-    </font></td>
   </tr>
 </table>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-
-<p>
-More specifically, given an enumerative problem, formulating it over a finite field (e.g. such as <b>F</b><sub>65521</sub>), and then
-computing and factoring a univariate eliminant gives the cycle type of the correspomding Frobenius elements.
-It is known that this selects fairly uniformly, so that by computing enough Frobenius elements will reveal the poccible cycle types of
-Frobenius elements and eventually the distribution of cycle types in the Galois group.
-</p>  
-
-<p>
-Of the 44 essential Schubert problems, only one, with 768 solutions (<img src="Tableaux/1.Small.gif"><sup>10</sup>=768) has resisted efforts
-to compute an eliminant.
-</p>  
-
-<p>
-  The 40 that were determined to have the full symmetric group as their Galois group took 294.594 GHz-Days for that determination, of which
-  290.04 GHz-Days were spent on the largest problem, which has 384 solutions,
-  (<img src="Tableaux/2.Small.gif"><sub>&middot;</sub><img src="Tableaux/1.Small.gif"><sup>8</sup>=384)
-</p>  
-
-<p>
-The three enriched problems all have different Galois groups, and these are discussed in <a href="LG4.pdf"><img src="images/pdf.gif"></a>.
-<!---------------------------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------------------------->
-<hr>
-<!---------------------------------------------------------------------------------------------------->
-<table border=0>
-  <tr><td>
-  <!---------------------------------------------------------------------------------------------------->
 <table border=1>
   <tr valign=top>
     <td colspan=4 align=center>
     <font color=#0000ff size=+2><sub><img src="Tableaux/31.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub> = 4 in LG(4) </font> </td>
    </tr>
-  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr> 
- <!-------------------------------------------------->
+  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,2 </td>
     <td align=right> 149672&nbsp;</td>
@@ -92,8 +52,7 @@ The three enriched problems all have different Galois groups, and these are disc
     <td colspan=4 align=center>
     <font color=#0000ff size=+2><img src="Tableaux/3.Small.gif">&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 4 in LG(4) </font> </td>
    </tr>
-  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr> 
- <!-------------------------------------------------->
+  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <!-------------------------------------------------->
   <tr>
     <td>&nbsp;4 </td>
     <td align=right> 201551&nbsp;</td>
@@ -129,16 +88,13 @@ The three enriched problems all have different Galois groups, and these are disc
     <td colspan=4><font size=+1> This took 17.67 GHz-Hours </font></td>
   </tr>
 </table>
-<!---------------------------------------------------------------------------------------------------->
-</td><td width=40pt></td><td valign=top>
-<!---------------------------------------------------------------------------------------------------->
+<!----------------------------------------------------------------------------------------------------><br>
 <table border=1>
   <tr valign=top>
     <td colspan=4 align=center>
     <font color=#0000ff size=+2><sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 8 in LG(4) </font> </td>
    </tr>
-  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr> 
- <!-------------------------------------------------->
+  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <!-------------------------------------------------->
   <tr>
     <td>&nbsp;4,4 </td>
     <td align=right> 626184386&nbsp;</td>
@@ -195,11 +151,7 @@ The three enriched problems all have different Galois groups, and these are disc
     <td colspan=4><font size=+1> This took 5.86 GHz-Years </font></td>
   </tr>
 </table>
-<!---------------------------------------------------------------------------------------------------->
-</td></tr></table>
-
-
-<br>
+<!----------------------------------------------------------------------------------------------------><br>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
