--- a/research/stories/LGalois/index.html
+++ b/research/stories/LGalois/index.html
@@ -19,7 +19,8 @@
   </tr>
   <tr><td></td>
     <td><font size=+1>
-	The Lagrangian Grassmannian is the set of <i>n</i>-dimensional isotropic linear subspaces in 2<i>n</i>-dimension space equipped
+	The Lagrangian Grassmannian LG(<i>n</i>) is the set of <i>n</i>-dimensional isotropic linear subspaces
+	in 2<i>n</i>-dimension space equipped
 	with a nondegenerate alternating form (a symplectic vector space).
 	This has dimension <i>n</i>(<i>n</i>-1)/2.
 	It has Schubert subvarieties and a rich Schubert calculus of enumerative geometry.
@@ -31,178 +32,60 @@
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<a href="LG5.html">Raw data for LG5</a>
+Schubert problems on the Lagrangian Grassmannian are given by two data <br>
+&#x25cf;  An isotropic flag <i>F</i><sub>&#x2219;</sub>, which is a sequence of
+isotropic linear subsaces
+<i>F</i><sub>1</sub>&#8834;<i>F</i><sub>2</sub>&#8834;&nbsp;&ctdot;&nbsp;&#8834;<i>F</i><sub><i>n</i></sub> with
+<i>F</i><sub><i>n</i></sub> Lagrangian. <br>
+&#x25cf; A strict partition: &lambda;, which is a sequence
+<i>n</i> &ge; &lambda;<sub>1</sub> &gt;&lambda;<sub>2</sub> &gt;&nbsp;&ctdot;&nbsp;&gt;&lambda;<sub><i>k</i></sub> .<br>
+
+<i>Include some explanation here</i>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>There are 44 essential Schubert problems on the Lagrangian Grassmannian of isotropic 4-planes in 8-space, LG(4).
+LG(3)  has four essential Schubert problems, none of which are enriched.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+LG(4) has 44 essential Schubert problems.
 (By essential, we mean that they do not reduce to a smaller Lagrangian Grassmannian, and have more than two solutions.)
-Of these three have been determined to be enriched in that they do not have full symmetric Galois groups.
-The method used is to compute Frobenius elements in the Galois groups over <b>Q</b>, giving a type of a lower bound 
-the Galois group.
-When the Galois group is the full symmetric group, this often quickly determines that, and  it can be used to infer that the problem is
-enriched.
-</p>  
-
-<p>
-More specifically, given an enumerative problem, formulating it over a finite field (e.g. such as <b>F</b><sub>65521</sub>), and then
-computing and factoring a univariate eliminant gives the cycle type of the correspomding Frobenius elements.
-It is known that this selects fairly uniformly, so that by computing enough Frobenius elements will reveal the poccible cycle types of
-Frobenius elements and eventually the distribution of cycle types in the Galois group.
-</p>  
-
-<p>
-Of the 44 essential Schubert problems, only one, with 768 solutions (<img src="Tableaux/1.Small.gif"><sup>10</sup>=768) has resisted efforts
+One, with 768 solutions  (<img src="Tableaux/1.Small.gif"><sup>10</sup>=768) resisted efforts
 to compute an eliminant.
-</p>  
-
-<p>
-The 40 that were determined to have the full symmetric group as their Galois group took 79.26 days for that determination, of which 78.39
-days were spent on the largest problem, which has 384 solutions,
-(<img src="Tableaux/2.Small.gif"><sub>&middot;</sub><img src="Tableaux/1.Small.gif"><sup>8</sup>=384)
-</p>  
-
-<p>
-The three enriched problems all have different Galois groups, and these are discussed in <a href="LG4.pdf"><img src="images/pdf.gif"></a>.
-<!---------------------------------------------------------------------------------------------------->
+Of the remaining 43, exactly three are enriched.
+We used 294.59 GHz-Days determining that 40 had fully symmetric Galois Group, and 5.87 GHz-Years studying the remaining
+three, finding three different Galois groups.
+The enriched problems had 4 and 8 solutions.
+These are discussed in <a href="LG4.pdf"><img src="images/pdf.gif"></a>.<br>
+A more complete description of the computation on this Grassmannian is found <a href="LG4.html">here</a>.
+&nbsp; &nbsp; <a href="LG4_raw.html">Raw data for LG4</a>.
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<table border=1>
-  <tr valign=top>
-    <td colspan=4 align=center>
-    <font color=#0000ff size=+2><sub><img src="Tableaux/31.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub> = 4 in LG(4) </font> </td>
-   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <tr>
-    <td>&nbsp;2,2 </td>
-    <td align=right> 149672&nbsp;</td>
-    <td align=right> 0.7484&nbsp;</td>
-    <td align=right> 2.9934&nbsp;</td>
-  </td>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,1,1 </td>
-    <td align=right> 50328&nbsp;</td>
-    <td align=right> 0.2516&nbsp;</td>
-    <td align=right> 1.0066&nbsp;</td>
-  </td>
-  <!-------------------------------------------------->
-  <tr>
-    <td colspan=4><font size=+1> This computed 200000 Frobenius elements </font></td>
-  </tr>
-  <tr>
-    <td colspan=4><font size=+1> This took 2969.40 seconds </font></td>
-  </tr>
-</table>
-<!----------------------------------------------------------------------------------------------------><br>
-<table border=1>
-  <tr valign=top>
-    <td colspan=4 align=center>
-    <font color=#0000ff size=+2><img src="Tableaux/3.Small.gif">&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 4 in LG(4) </font> </td>
-  </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;4 </td>
-    <td align=right> 201551&nbsp;</td>
-    <td align=right> 0.2519&nbsp;</td>
-    <td align=right> 2.0155&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;2,2 </td>
-    <td align=right> 299875&nbsp;</td>
-    <td align=right> 0.3748&nbsp;</td>
-    <td align=right> 2.9987&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,2 </td>
-    <td align=right> 199196&nbsp;</td>
-    <td align=right> 0.2490&nbsp;</td>
-    <td align=right> 1.9920&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,1,1 </td>
-    <td align=right> 99378&nbsp;</td>
-    <td align=right> 0.1242&nbsp;</td>
-    <td align=right> 0.9938&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td colspan=4><font size=+1> This computed 800000 Frobenius elements </font></td>
-  </tr>
-  <tr>
-    <td colspan=4><font size=+1> This took 4.78 Hours </font></td>
-  </tr>
-</table>
-<!----------------------------------------------------------------------------------------------------><br>
-<table border=1>
-  <tr valign=top>
-    <td colspan=4 align=center>
-    <font color=#0000ff size=+2><sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 8 in LG(4) </font> </td>
-   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr> 
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;4,4 </td>
-    <td align=right> 626184386&nbsp;</td>
-    <td align=right> 0.3131&nbsp;</td>
-    <td align=right> 60.1137&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;2,6 </td>
-    <td align=right> 334051444&nbsp;</td>
-    <td align=right> 0.1670&nbsp;</td>
-    <td align=right> 32.0689&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,3,3 </td>
-    <td align=right> 333472372&nbsp;</td>
-    <td align=right> 0.1667&nbsp;</td>
-    <td align=right> 32.0133&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,2,4 </td>
-    <td align=right> 249921255&nbsp;</td>
-    <td align=right> 0.1250&nbsp;</td>
-    <td align=right> 23.9924&nbsp;</td>
-  </tr>
- <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;2,2,2,2 </td>
-    <td align=right> 259801406&nbsp;</td>
-    <td align=right> 0.1299&nbsp;</td>
-    <td align=right> 24.9409&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,1,1,2,2 </td>
-    <td align=right> 186420449&nbsp;</td>
-    <td align=right> 0.0932&nbsp;</td>
-    <td align=right> 17.8964&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,1,1,1,1,1,1 </td>
-    <td align=right> 10148688&nbsp;</td>
-    <td align=right> 0.0051&nbsp;</td>
-    <td align=right> 0.9743&nbsp;</td>
-  </tr>
-  <!-------------------------------------------------->
-  <tr>
-    <td colspan=4><font size=+1> This computed 2000000000 Frobenius elements </font></td>
-  </tr>
-  <tr>
-    <td colspan=4><font size=+1> This took 578.82 Days </font></td>
-  </tr>
-</table>
-<!----------------------------------------------------------------------------------------------------><br>
+LG(5) has significantly more Schubert problems.
+We studied the 472 essential problems with at most 320 solutions.
+Of these, 36 were enriched.
+We used 2.53 GHz-years determining that the 436 had full-symmetric Galois group and the computation of many Frobenius
+elements tool 11.66 GHz-years.
+The enriched problems had 4, 8, or 16 solutions, and we found six different Galois groups.
+These are discussed on this <a href="LG5.html">page</a>.
+&nbsp; &nbsp; <a href="LG5_raw.html">Raw data for LG5</a>.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+
+<!---------------------------------------------------------------------------------------------------->
+<a href="LG5_raw.html">Raw data for LG5</a>
+<!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
 <font color="#aa00aa">
-<i> Created Thu 15 Aug 2024 08:04:33 PM CDT
+<i> Created Fri Apr  4 04:42:25 AM CDT 2025
  by Frank Sottile</i>
 </font>
 <body>
