--- a/conferences.html
+++ b/conferences.html
@@ -200,7 +200,7 @@
  <li>
    <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
    26&ndash;30 May 2025.
-   Fields Institute Toronto.
+   Fields Institute Toronto.  <a href="Fields25/index.html">Reading List for Algebraic Aspects of Periodic Operators</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
