--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -9,11 +9,12 @@
 <!---------------------------------------------------------------------------------------------------->  
 <HR>
 <!---------------------------------------------------------------------------------------------------->
+<!----------
 <font size=+2 color=red>
   Please consider attending the  <a href="../../conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
   which will be held at TAMU Friday-Saturday-Sunday March 28&ndash;30.
  </font>
-
+----------------->
 <!---------------------------------------------------------------------------------------------------->  
 <HR>
 <!---------------------------------------------------------------------------------------------------->
@@ -115,18 +116,32 @@ possibly concurrent.
      <TT>https://franksottile.github.io/teaching/25.1/RAGA.html</TT></A>
   </TD>
  </TR>
- <tr>
-   <td colspan=4>Suggested topics for presentations:<br>
-     Hilbert's 1888 Theorem on positivity and sums of squares. John Ajayo and Marleigh Purgar-Mcdonald</br>
+<tr>
+  <td colspan=4> Schedule of Presentations.   Blocker 628 Tuesday April 29 10:30-13:00 and Wednesday April 30 9-11<br>
+    <b>Tuesday 29 April</b>
+    <ul>
+      <li>10:30&mdash;11:00</li>
+      <li>11:10&mdash;11:40</li>
+      <li>11:50&mdash;12:20</li>
+      <li>12:30&mdash;13:00</li>
+    </ul>
+     <b>Wednesday 30 April</b>
+    <ul>
+      <li>9:00&mdash;9:30</li>
+      <li>9:40&mdash;10:10</li>
+      <li>10:20&mdash;10:50</li>
+    </ul>
+  </td>
+</tr>
+<tr>
+   <td colspan=4>Presentations:<br>
+     Hilbert's 1888 Theorem on positivity and sums of squares. John Ajayi and Marleigh Purgar-Mcdonald</br>
      Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
      "Newton-Okounkov bodies of chemical reaction systems" by Obatake and Walker. &nbsp; &nbsp;  Jordy Lopez and Paul Dessauer.<br>
-     Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz <br>
+     Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz Qi Xiao<br>
      The Shapiro Conjecture and the Wronski map.  &nbsp; &nbsp; C.J. Bott and Daniel Dale<br>
      A counterexample to the strong real Jacobian Conjecture.  &nbsp; &nbsp; Kevin Le and Jonah Robinson.<br>
-     Sums of squares and minimal varieties.   &nbsp; &nbsp; Somak Dutta and Ruzho Sagayaraj.<br>
-     Present Macaulay2 Package RealRoots.<br>
-     Multivariate generalizations of stability of univariate polynomials.<br>
-     <font color=red>Many of the <FONT COLOR=AA00FF><EM>Sources</EM></FONT> above would be fine for a presentation.
+     Sums of squares and minimal varieties.   &nbsp; &nbsp; Somak Dutta and Ruzho Sagayaraj.
 
    </td>
    
