--- a/advising/index.html
+++ b/advising/index.html
@@ -18,6 +18,11 @@
  <tr>
   <td>
    <uL>
+    <!---------------------------------------------------------------------------------------------------->
+    <li>
+    Isaiah Galo,  TAMU Master's Student.
+    </li>
+    <!---------------------------------------------------------------------------------------------------->  
     <li>
        Jonah Robinson, TAMU Master's student.
     </li>
@@ -179,7 +184,11 @@
 <ul>
 <!--------------------------------------------------------------------------------------->
 
-    <li>
+     <li>
+    Isaiah Galo,  TAMU Master's Student.
+    </li>
+    <!---------------------------------------------------------------------------------------------------->  
+   <li>
      Jonah Robinson,  TAMU Master's Student.
     </li>
     <li>
@@ -305,7 +314,7 @@
       <A HREF=""></a>Elise Walker 2017&ndash; 2022. (Ph.D. 2022).
     <table>
     <tr><td></td><td></td>
-     <td>Postdoc at Sandia National Labs.</td> 
+     <td>Stff Scientist at Sandia National Labs.</td> 
     </tr>
     <tr>
      <td>&nbsp;</td>
