--- a/conferences.html
+++ b/conferences.html
@@ -108,8 +108,8 @@
 <UL>
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/"></a>Numerical Algebraic Geometry and Correlated Electrons:
-   Generalized Grassmannians, Response Functions and Excited States,
+   <a href="https://www.ipam.ucla.edu/programs/long-programs/numerical-algebraic-geometry-and-correlated-electrons-generalized-grassmannians-response-functions-and-excited-states/">Numerical Algebraic Geometry and Correlated Electrons:
+   Generalized Grassmannians, Response Functions and Excited States</a>,
    Long program at the <a href="https://www.ipam.ucla.edu/">Institute for Pure and Applied Mathematics</a>, Spring 2027.
    Organizers: Guido von Rudorff,
    Fabian M. Faulstich,
@@ -135,9 +135,17 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://mega.sciencesconf.org/"></a>FoCM 2026,
+   <a href="https://www.mathunion.org/icm/icm-2026">International Congress of Mathematicians</a>, 23 &ndash; 30 July 2026,
+   Philadelphia, PA.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href=""></a>FoCM 2026,
    Vienna, 8  &ndash; 18 July 2026.
    <a href="http://focm-society.org/">Webpage of the Foundations of Computational Mathematics</a>.
+   T&uuml;rk&uuml; &Ouml;zl&uuml;m Celik, Seth Sullivant, and I are organizing a 3-day workshop on Computational Algebraic
+   Geometry, 13 &ndash; 15 July 2026.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
@@ -200,44 +208,9 @@
  <li>
    <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
    26&ndash;30 May 2025.
-   Fields Institute Toronto.  <a href="Fields25/index.html">Reading List for Algebraic Aspects of Periodic Operators</a>.
+   Fields Institute Toronto.  <a href="Fields25/index.html">Reading List</a> for Algebraic Aspects of Periodic Operators,
+   organized with Matthew Faust and Stephen Shipman.
  </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://sites.google.com/view/macaulay2tulane/">Macaulay2 Workshop</a>,
-   Tulane University,
-   14  &ndash; 18 April 2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://johndcobb.github.io/organizing/MAAG2025/">Meetings in Applied Algebraic Geometry 2025</a>,
-   Auburn University,
-   12  &ndash; 13 April 2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://sites.google.com/view/combinatexas2025/home">CombinaTexas 2025</a>,
-   Texas A&amp;M University,
-   12  &ndash; 13 April 2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
-   Texas A&amp;M University,
-   28  &ndash; 30 March 2025.<br>
-   Supported by NSF grant DMS-2349244.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://sites.google.com/view/uh-lsu-tamu-umrc-2025">Undergraduate Mathematics Conference</a>,
-   22&ndash;23 March 2025, University of Houston.
-   <a href="https://sites.google.com/view/24txla-ug-conference/">Link to past conferences</a>.
- </li>  
  <!---------------------------------------------------------------------------------------------------->
 </UL>
 
