--- a/conferences/index.html
+++ b/conferences/index.html
@@ -30,9 +30,17 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://mega.sciencesconf.org/"></a>FoCM 2026,
+   <a href="https://www.mathunion.org/icm/icm-2026">International Congress of Mathematicians</a>, 23 &ndash; 30 July 2026,
+   Philadelphia, PA.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href=""></a>FoCM 2026,
    Vienna, 8  &ndash; 18 July 2026.
    <a href="http://focm-society.org/">Webpage of the Foundations of Computational Mathematics</a>.
+   T&uuml;rk&uuml; &Ouml;zl&uuml;m Celik, Seth Sullivant, and I are organizing a 3-day workshop on Computational Algebraic
+   Geometry, 13 &ndash; 15 July 2026.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
@@ -44,10 +52,17 @@
  <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
-   With Shipman and Faust, we are organizing a short course and research experience on algebraic aspects of periodic operators.
    26&ndash;30 May 2025.
-   Fields Institute Toronto.
+   Fields Institute Toronto.  <a href="Fields25/index.html">Reading List</a> for Algebraic Aspects of Periodic Operators,
+   organized with Matthew Faust and Stephen Shipman.
  </li>
+ <!---------------------------------------------------------------------------------------------------->
+</ul>
+<!------------------------------------------------------------------------>
+<hr>
+<!------------------------------------------------------------------------>
+<B><FONT SIZE=+1 color=brown>Conference organized for Frank Sottile</FONT></B>
+<ul>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
@@ -56,14 +71,6 @@
    28  &ndash; 30 March 2025.<br>
    Supported by NSF grant DMS-2349244.
  </li>
-
- <!---------------------------------------------------------------------------------------------------->
-</ul>
-<!------------------------------------------------------------------------>
-<hr>
-<!------------------------------------------------------------------------>
-<B><FONT SIZE=+1 color=brown>Conference organized for Frank Sottile</FONT></B>
-<ul>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
