--- a/teaching.html
+++ b/teaching.html
@@ -185,13 +185,18 @@
 <B><FONT SIZE=+1 color=brown>Current Advisees</FONT></B>
 
 <dl>
-  <dd>
  <!---------------------------------------------------------------------------------------------------->
+ <dd>
+    Isaiah Galo,  TAMU Master's Student.
+ </dd>
+ <!---------------------------------------------------------------------------------------------------->  
+ <!---------------------------------------------------------------------------------------------------->
+ <dd>
     Merri Stillman,  TAMU Master's Student.
- <!---------------------------------------------------------------------------------------------------->
  </dd>
  <!---------------------------------------------------------------------------------------------------->
-  <dd>
+ <!---------------------------------------------------------------------------------------------------->
+ <dd>
     Jonah Robinson,  TAMU Master's Student.  
  </dd>
  <!---------------------------------------------------------------------------------------------------->
