--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -118,10 +118,12 @@ possibly concurrent.
  </TR>
 <tr>
   <td colspan=4> Schedule of Presentations.   Blocker 628 Tuesday April 29 10:30-13:00 and Wednesday April 30 9-11<br>
-    <b>Tuesday 29 April</b>
+    <b>Tuesday 29 April</b> 
     <ul>
       <li>10:30&mdash;11:00</li>
-      <li>11:10&mdash;11:40</li>
+      <li>11:10&mdash;11:40 &nbsp;
+        <font color=blue>Lax's discriminant of a symmetric matrix is a sum of squares.</font> &nbsp; &nbsp;
+	   Pooja Joshi and Zeytoon  Kazemimoghaddam</li>
       <li>11:50&mdash;12:20</li>
       <li>12:30&mdash;13:00</li>
     </ul>
