--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -6,8 +6,8 @@
   Math 666:  Real Algebraic Geometry for Applications
  </H1>
 
-<!---------------------------------------------------------------------------------------------------->  
-<HR>
+<!----------------------------------------------------------
+<HR>------------------------------------------>  
 <!---------------------------------------------------------------------------------------------------->
 <!----------
 <font size=+2 color=red>
@@ -82,10 +82,14 @@ possibly concurrent.
              S Müller, E Feliu, G Regensburger, C Conradi, A Shiu, A Dickenstein<br>
               Foundations of Computational Mathematics 16 (1), 69-97 2016.
        </li>
-<!-- https://arxiv.org/abs/2411.10776  Wronski Pairs of Honeycomb Curves -->
-      <li>
+       <li>
 	 <a href="../../research/pdf/RealRoots.pdf">Real Solutions to Systems of Equations in Macaulay2</a> <br>
-       Jordy Lopez-Garc&iacute;a, Kelly Maluccio, Frank Sottile, and Thomas Yahl.
+         Jordy Lopez-Garc&iacute;a, Kelly Maluccio, Frank Sottile, and Thomas Yahl.
+       </li>
+       <li>
+        <a href="https://bookstore.ams.org/GSM-241/">Real Algebraic Geometry and Optimization</a>, Thorsten Theobald,<br>
+           Graduate Studies in Mathematics, Volume 241, AMS.<br>  
+           <a href="Theobald_correction_Putinar.pdf">Corrections to Section 6.7 on Putinar's Theorem</a>.
        </li>
      </ul>
    </td>
