--- a/CV.html
+++ b/CV.html
@@ -76,7 +76,11 @@ Cambridge University.
 <B> Awards and Fellowships</B>
 <DL>
 
-<li>Fellow of the American Mathematical Society, November 2012.</li>
+<li>Fellow of the Society for Industrial and Applied Mathematics, 2025 class.</li>
+
+<li>Fellow of the American Association for the Advancement of Science, 2024 class.</li>
+
+<li>Fellow of the American Mathematical Society, Innagural class of 2012.</li>
 
 <li>TAMU Mathematics Department award for service, December 2009.
   
@@ -240,6 +244,9 @@ Cambridge University.
 <!--------------------------------------------------------------------->
 <B>Conference Grants</B>
 <DL>
+
+<li>  NSF Conference grant "Texas Algebraic Geometry Symposium 2024&ndash;2026", DMS-2349244.
+      PI: Frank Sottile. April 2024 &ndash; March 2027. 
 
 <li>  NSF Conference grant "Texas Algebraic Geometry Symposium 2018&ndash;2020", DMS-1758574.
       PI: Gregory Pearlstein and Co-PI: Frank Sottile. March 2018 &ndash; February 2021. 
@@ -451,10 +458,10 @@ Cambridge University.
  </li>
    <br>
  <li>
-   <A HREF="https://cbott2.github.io/">C.J. Bott</a>, November 2020 &ndash; 
+   <A HREF="https://cbott2.github.io/">C.J. Bott</a>, November 2020 &ndash; August 2025.
  </li>
  <li>
-   <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, March 2021 &ndash; 
+   <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, March 2021 &ndash; August 2025.
  </li>
  <!------------------------------------------------------------------>
    <li>
@@ -561,6 +568,10 @@ Cambridge University.
    December 2011.
 </dd>
 
+<dd>
+   Thesis Committee for Matthias Himmelmann, Universit&auml;t Potsdam,  January 2025.
+</dd>
+
 <DD> Ph.D. Thesis committees at Texas A&amp;M University (Non-chair)
  <dl>
   <dd> Mariana Pereira, Ph.D. (2006),  2004&ndash;2006.
@@ -648,9 +659,15 @@ and Research Seminars)
 <DD><B>Departmental Activities</B>
 <UL>
 
-<li> Honors Advisor, 2019&ndash;</li>
+<li> Director of Honors and Undergraduate Research, 2014&ndash;</li>
 
-<li> Member of Undergraduate Studies Committee, 2019&ndash;</li>
+<li> Member of Undergraduate Program Committee, 2024&ndash;</li>
+  
+<LI> Member of Departmental Executive Committee, TAMU, 2024&ndash;.
+
+<li> Honors Advisor, 2019&ndash;2021</li>
+
+<li> Member of Undergraduate Studies Committee, 2019&ndash;2021</li>
   
 <LI> Member of Departmental Executive Committee, TAMU, 2017&ndash;2019.
 
