--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -129,13 +129,21 @@ possibly concurrent.
         <font color=blue>Lax's discriminant of a symmetric matrix is a sum of squares.</font> &nbsp; &nbsp;
 	   Pooja Joshi and Zeytoon  Kazemimoghaddam</li>
       <li>11:50&mdash;12:20</li>
-      <li>12:30&mdash;13:00</li>
+      <li>12:30&mdash;13:00 &nbsp;
+	<font color=blue>A counterexample to the strong real Jacobian Conjecture.</font>  &nbsp; &nbsp;
+	Kevin Le and Jonah Robinson</li>
     </ul>
      <b>Wednesday 30 April</b>
     <ul>
-      <li>9:00&mdash;9:30</li>
-      <li>9:40&mdash;10:10</li>
-      <li>10:20&mdash;10:50</li>
+      <li>9:00&mdash;9:30 &nbsp;
+        <font color=blue>Newton-Okounkov bodies of chemical reaction systems. (by Obatake and Walker).</font> &nbsp; &nbsp;
+          Paul Dessauer and Jordy Lopez.</li>
+      <li>9:40&mdash;10:10&nbsp;
+        <font color=blue>Sums of squares and minimal varieties.</font>   &nbsp; &nbsp; Somak Dutta and Ruzho Sagayaraj. </li>
+      
+      <li>10:20&mdash;10:50 &nbsp;
+        <font color=blue>Hilbert's 17th problem.</font> &nbsp; &nbsp;
+          Ozan Acikgoz Qi Xiao.</li>
     </ul>
   </td>
 </tr>
@@ -143,7 +151,7 @@ possibly concurrent.
    <td colspan=4>Presentations:<br>
      Hilbert's 1888 Theorem on positivity and sums of squares. John Ajayi and Marleigh Purgar-Mcdonald</br>
      Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
-     "Newton-Okounkov bodies of chemical reaction systems" by Obatake and Walker. &nbsp; &nbsp;  Jordy Lopez and Paul Dessauer.<br>
+      by Obatake and Walker. &nbsp; &nbsp;  Jordy Lopez and Paul Dessauer.<br>
      Hilbert's 17th problem. &nbsp; &nbsp;   Ozan Acikgoz Qi Xiao<br>
      The Shapiro Conjecture and the Wronski map.  &nbsp; &nbsp; C.J. Bott and Daniel Dale<br>
      A counterexample to the strong real Jacobian Conjecture.  &nbsp; &nbsp; Kevin Le and Jonah Robinson.<br>
