--- a/talks.html
+++ b/talks.html
@@ -126,6 +126,22 @@
     <a href="talks/25/AG25.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Platonic solids in the next dimension</I></font>,
+    Math Club, Texas A&amp;M University,
+    28 April 2025.
+    <a href="talks/25/4D.txt">Abstract</a>.
+    <a href="talks/17/4D/index.html">Visuals</a>.
+    <a href="research/stories/hyperCube/index.html">Building the 4-cube</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+   <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
@@ -140,14 +156,14 @@
     12 March 2025.
     <a href="talks/18/Shape.txt">Abstract</a>.
   </li>
- <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
     Colloquium, University of Hawaii, 10 March 2025.  <a href="talks/24/Golden.txt">Abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>A Bestiary of Bloch Varieties</I></font>,
     MPHA Seminar, 7 March 2025.
@@ -155,12 +171,6 @@
     <a href="talks/25/Bestiary.html">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
