--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -124,7 +124,9 @@ possibly concurrent.
   <td colspan=4> Schedule of Presentations.   Blocker 628 Tuesday April 29 10:30-13:00 and Wednesday April 30 9-11<br>
     <b>Tuesday 29 April</b> 
     <ul>
-      <li>10:30&mdash;11:00</li>
+      <li>10:30&mdash;11:00 &nbsp;
+        <font color=blue>Hilbert's 1888 Theorem on positivity and sums of squares.</font>
+	John Ajayi and Marleigh Purgar-Mcdonald</li>
       <li>11:10&mdash;11:40 &nbsp;
         <font color=blue>Lax's discriminant of a symmetric matrix is a sum of squares.</font> &nbsp; &nbsp;
 	   Pooja Joshi and Zeytoon  Kazemimoghaddam</li>
