--- a/advising/index.html
+++ b/advising/index.html
@@ -35,10 +35,6 @@
     </li>
     <br>
 
-  <!------------------------------------------------------------------>
-    <li>
-     <A HREF="http://mattfaust.github.io/">Matthew Faust</a>, TAMU Graduate Student.
-    </li>
  <!------------------------------------------------------------------>
     <li>
       <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D. Student.
@@ -62,18 +58,20 @@
    </ul>
   </td>
   <td width=50></td>
-  <td><a href="team/Team2024_orig.jpg"><img src="team/Team2024.jpg"></a> <br>
-    <font color=blue size=+1><b>Team 2024</b></font> Left to right:
+  <td><a href="team/Team2025_orig.jpg"><img src="team/Team2025.jpg"></a> <br>
+    <font color=blue size=+1><b>Team 2025</b></font> Left to right: &nbsp;
     Daniel Dale &nbsp;
     Somak Dutta &nbsp;
     Jonah Robinson &nbsp;
-    Matt Faust &nbsp; 
-    Frank Sottile &nbsp;  <br>
-    Jordy Lopez-Garc&iacute;a &nbsp;
+    Ruzho Sagayaraj &nbsp; <br>
     C.J. Bott &nbsp; 
-    Ruzho Sagayaraj &nbsp;
+    Frank Sottile &nbsp; 
+    Jordy Lopez-Garc&iacute;a &nbsp;
+    John Ajayi &nbsp;
+    Suhan Zhong &nbsp;
   </td>
  </tr>
+ 
 </table>
 <HR>
 <!----------------------------------------------------------->
@@ -563,9 +561,29 @@
  </li>
 
 </uL>
-<!----------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <HR>
-<!----------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+ <table>
+ <tr>
+  <!---------------------------------------------------------------------------------------------------->
+   <td><a href="team/Team2025_orig.jpg"><img src="team/Team2025.jpg"></a> <br>
+    <font color=blue size=+1><b>Team 2025</b></font> Left to right: &nbsp;
+    Daniel Dale &nbsp;    Somak Dutta &nbsp;    Jonah Robinson &nbsp;    Ruzho Sagayaraj &nbsp;    C.J. Bott &nbsp;  <br>
+    Frank Sottile &nbsp;     Jordy Lopez-Garc&iacute;a &nbsp;    John Ajayi &nbsp;    Suhan Zhong 
+  </td>
+  <!---------------------------------------------------------------------------------------------------->
+  <td><a href="team/Team2024_orig.jpg"><img src="team/Team2024.jpg"></a> <br>
+    <font color=blue size=+1><b>Team 2024</b></font> Left to right: &nbsp;
+    Daniel Dale &nbsp;      Somak Dutta &nbsp;    Jonah Robinson &nbsp;    Matt Faust &nbsp; 
+    Frank Sottile <br>      Jordy Lopez-Garc&iacute;a &nbsp;    C.J. Bott &nbsp;     Ruzho Sagayaraj 
+   </td>
+   <!---------------------------------------------------------------------------------------------------->
+ </tr>
+ </table>
+<!---------------------------------------------------------------------------------------------------->
+<HR>
+<!---------------------------------------------------------------------------------------------------->
  <table>
  <tr>
   <!--------------------------------------------------------------------------------->
