--- a/conferences.html
+++ b/conferences.html
@@ -208,7 +208,7 @@
  <li>
    <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
    26&ndash;30 May 2025.
-   Fields Institute Toronto.  <a href="Fields25/index.html">Reading List</a> for Algebraic Aspects of Periodic Operators,
+   Fields Institute Toronto.  <a href="conferences/Fields25/index.html">Reading List</a> for Algebraic Aspects of Periodic Operators,
    organized with Matthew Faust and Stephen Shipman.
  </li>
  <!---------------------------------------------------------------------------------------------------->
